logging/master/elasticsearch/deployment.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: logging
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:8.0.0
      serviceAccountName: elasticsearch
#      initContainers:
#      - name: set-vm-max-map-count
#        image: busybox
#        imagePullPolicy: IfNotPresent
#        command: ['sysctl', '-w', 'vm.max_map_count=262144']
#        securityContext:
#          privileged: true
#      - name: volume-mount-hack
#        image: busybox
#        imagePullPolicy: IfNotPresent
#        command: ["sh", "-c", "chown -R 1000:100 /usr/share/elasticsearch/data"]
#        volumeMounts:
#        - name: data
#          mountPath: /usr/share/elasticsearch/data
#      containers:
#      - name: elasticsearch
#        image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9200
        resources:
          limits:
            memory: "2147483648"
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/elasticsearch.yml
          subPath: elasticsearch.yml
        - name: data
          mountPath: /usr/share/elasticsearch/data
      # Allow non-root user to access PersistentVolume
      securityContext:
        fsGroup: 1000
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: elasticsearch
      - name: data
        persistentVolumeClaim:
          claimName: elasticsearch
      # - name: data
      #   hostPath:
      #     path: /srv/elasticsearch-data
---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: elasticsearch
#   labels:
#     app: elasticsearch
#     stack: logging
# spec:
#   rules:
#   -
#     # host: elasticsearch.minikube.localnet
#     host: <YOUR_HOST>
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: elasticsearch
#           servicePort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
    stack: logging
spec:
  # needed on minikube
  type: NodePort
  ports:
  - name: "api"
    port: 9200
    targetPort: 9200
  selector:
    app: elasticsearch
    stack: logging
